<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/this_is_an_orange_textview"
            android:textColor="@color/whiteText"
            android:textSize="20sp" />


        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="@color/blue"
            android:gravity="center"
            android:text="This is a blue TextView"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/blue"
            android:text="@string/this_is_a_button"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:src="@drawable/puppy" />

        <Button
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/green"
            android:text="@string/this_is_a_green_button"
            android:textSize="16dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:orientation="vertical"
        android:background="@color/orange"
        android:gravity="center">
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/this_is_an_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_a_new_edittext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/blue">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notify_me"
            android:textSize="20sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="match_parent" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/auto_backup"
            android:textSize="20sp"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue">
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="20sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="20sp"/>
        </RadioGroup>


    </LinearLayout>



</LinearLayout>